--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors Game</title>
+    <script src="./gameEngine.js"></script>
 </head>
 <body>
-    <script>
-        console.log('it begins.')
-        
-    </script>
+    
 </body>
 </html>
