--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors Game</title>
-    <script src="./gameEngine.js"></script>
+    <script src="./gameEngine.js" defer></script>
 </head>
 <body>
-    
+    <div class="player-selectors">
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissors">Scissors</button>
+    </div>  
+    <div class="results">
+    </div>  
 </body>
 </html>
